# mechcommander2

./: .clang-tidy  .gitignore  BUILD-WIN.md  BUILDING.md  CLAUDE.md  CMakeLists.txt  README.md
GameOS/gameos/: CMakeLists.txt  gameos.cpp  gameos_graphics.cpp  gameos_input.cpp  gameosmain.cpp  gos_input.cpp
GameOS/gameos/rendergl/: gameos_graphics.cpp  gl_render_constants.cpp  gl_utils.cpp  gl_utils.h  gos_render.cpp  graphics.h  render_constants.h  shader_builder.cpp  shader_builder.h
GameOS/gameos/rendervk/: gameos_graphics.cpp  gos_render.cpp  vk_internal.h
GameOS/gameos/utils/: file_utils.cpp  string_utils.cpp  vec.cpp  vec.h
GameOS/include/: gameos.hpp
GameOS/src/: platform_winbase.cpp
Viewer/: CMakeLists.txt
code/: componentlistbox.cpp  controlgui.cpp  loadscreen.cpp  logisticsdata.cpp  logisticsdialog.cpp  logisticsdialog.h  mainmenu.cpp  mechcmd2.cpp  mechlabscreen.cpp  objective.cpp  optionsarea.cpp  pilotreviewarea.cpp  prefs.cpp  salvagemecharea.cpp
data_tools/: CMakeLists.txt
docs/: CREDIT_PLAN.md  ENGINEERING_LOG.md  PROJECT_BRIEF.md  RENDERER_AUDIT.md  ROADMAP.md  TECHNICAL_NOTES.md
gui/: aanim.cpp  aanim.h  aanimobject.h
mclib/: color.cpp  echarstring.cpp  estring.cpp  ewcharstring.cpp  file.cpp  file.h  gamelog.cpp  heap.cpp  inifile.h  lzcomp.cpp  resizeimage.h  txmmgr.cpp  userinput.h  vfx_ellipse.cpp
mclib/mlr/: gosimagepool.hpp
mclib/stuff/: memorystream.hpp  style.hpp
res/: CMakeLists.txt
shaders/: gos_tex_vertex_lighted.frag  gos_tex_vertex_lighted.vert
shaders/vk/: common.glsl  (+24 more)
text_tool/: CMakeLists.txt  main.cpp
(+8 files in other folders)
